# VisionWorkbench

./: .gitignore  CLAUDE.md  COMPETITOR_ANALYSIS.md  GOAL.md  MVP_SPEC.md  PRODUCT_ANALYSIS.md  README.md  SYSTEM_ARCHITECTURE.md  pyproject.toml
tests/: test_dataset.py  test_evaluation.py  test_experiment.py  test_inference.py  test_model.py  test_training.py
vw/: __init__.py  cli.py  main.py
vw/app/: dataset_page.py  demo_page.py  evaluation_page.py  experiment_page.py  home.py  model_page.py  training_page.py
vw/config/: defaults.yaml  settings.py
vw/core/dataset/: registry.py  statistics.py  validator.py
vw/core/evaluation/: runner.py
vw/core/experiment/: manager.py
vw/core/model/: inference.py  registry.py
vw/core/training/: manager.py
vw/infrastructure/: database.py  filesystem.py  logging.py
vw/utils/: image.py
